--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -4,7 +4,7 @@
 body { 
 	font: 13px Helvetica, Arial;
 }
-form {
+/*form {
 	background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%;
 }
 form input { 
@@ -12,7 +12,7 @@ form input {
 }
 form button {
 	width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px;
-}
+}*/
 #messages {
 	list-style-type: none; margin: 0; padding: 0;
 }
