--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -13,15 +13,21 @@ form input {
 form button {
 	width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px;
 }*/
+.scrollable-list {
+    height: auto;
+    max-height: 77vh;
+    overflow-x: hidden;
+    word-wrap: break-word;
+}
 #messages {
 	list-style-type: none; margin: 0; padding: 0;
 }
 #messages li {
 	padding: 5px 10px;
 }
-#messages li:nth-child(odd) {
+/*#messages li:nth-child(odd) {
 	background: #eee; 
-}
+}*/
 .chatArea {
   height: 100%;
   padding-bottom: 60px;
